Opened 19 years ago

Closed 18 years ago

#555 closed bug (fixed)

Several things will crash using Romashka

Reported by: diver Owned by: axeld
Priority: blocker Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by axeld)

Since Axel obviously didn't get my mail i have to post this here.

This is a private (not yet released) ICQ client Romashka (Camomile) written by 3dEyes from the Samba fame. You could see several troubles with it in Haiku:

*1. Deskbar will crash on Romashka start. *2. Right click on upper toolbar and try to change theme, app_server will crash. *2. Start Romashka from Terminal -> click settings button -> close it -> click on desktop -> move Terminal window around, you should see redraw problems. *3. Toolbar images are shifted. *4. Clicking connect button will crash Romashka.

Change History (9)

comment:1 by axeld, 19 years ago

Thanks! I actually got your mail, but I was unable to answer you - your ISP was blocking me. I even tried to unblock myself (there was a link attached to the "recipient is not available" mail), but that didn't work either. The only thing that is even more annoying than spam is an unreliable mail service.

comment:2 by diver, 19 years ago

Now that is bad and strange, since it didn't blocked you 1,5 month ago, when you add me to abouthaiku.. Anyway, in the url you will find latest stable version to play with.

Umm, just wondering why i can't edit my 1st post to correct counting (see 1,2,2, 3,4) :-)

comment:3 by diver, 19 years ago

bug_file_loc: http://www.hanasoft.ru/files/RomashkaA14.ziphttp://www.hanasoft.ru/files/RomashkaA16.zip

comment:4 by diver, 19 years ago

bug_file_loc: http://www.hanasoft.ru/files/RomashkaA16.ziphttp://www.hanasoft.ru/files/RomashkaA18.zip

comment:5 by diver, 19 years ago

bug_file_loc: http://www.hanasoft.ru/files/RomashkaA18.ziphttp://www.hanasoft.ru/files/RomashkaA19.zip

comment:6 by diver, 19 years ago

*6. Start Romashka -> Settings -> Colors, now try to resize settings window, you should see that BColorControl follows BWindow, but it shouldn't.

comment:7 by aldeck, 18 years ago

Platform: All

Can't find Romashka on the web, can't reproduce. Not very informative for recent revisions anyway. This bug should be updated/precised or closed imho.

comment:8 by diver, 18 years ago

Latest version is 0.32dev1 http://hanasoft.ru/images/ss/Haiku_01.08.2007_Romashka.png but you could download only 0.3.1dev2 http://hanasoft.ru/files/Romashka_0.3.1d2.zip I'm wondering how much workarounds has been added to work ok in haiku. I'll try to get RomashkaA14.zip for this reason whithout haiku specific fixes to unhide hidden bugs.

comment:9 by axeld, 18 years ago

Description: modified (diff)
Resolution: fixed
Status: newclosed

The crashing problem of the Deskbar is fixed in hrev22117. The rest is either not reproducible anymore (app_server crash), or is not really interesting (Romashka crash).

Note: See TracTickets for help on using tickets.