* BShelf::_AddReplicant() did not recognize zombies if their object was not   inherited from BView. * BShelf::_AddReplicant() did not honour the fAllowZombies flag correctly; if   it wasn't allowed, no error message was given. * Both of these changes fixes the crashing of the Deskbar as described in   bug #555. * instantiate_object() now also fires a message to the syslog if the object's   image could not been loaded. Some cleanup, no longer resets errno.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22117 a95241bf-73f2-0310-859d-f6bbb57e9c96